manifests/webdav/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: webdav-server
  labels:
    app: webdav
spec:
  selector:
    app: webdav
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
