manifests/webdav/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webdav
  labels:
    gateway: private
    app: webdav
spec:
  hostnames:
    - webdav.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: https
  rules:
    - backendRefs:
        - name: webdav-server
          port: 80
