manifests/webdav/base/manifest.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webdav-server
  labels:
    app: webdav
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webdav
  template:
    metadata:
      labels:
        app: webdav
    spec:
      containers:
        - name: webdav-server
          image: docker.io/dgraziotin/nginx-webdav-nononsense:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          resources: {}
          volumeMounts:
            - name: data
              mountPath: /data
              readOnly: false
            - name: config
              mountPath: /config
              readOnly: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc-nfs-webdav-server-data
        - name: config
          emptyDir: {}

---
kind: Service
apiVersion: v1
metadata:
  name: webdav-server
  labels:
    app: webdav
spec:
  selector:
    app: webdav
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: webdav-server
  labels:
    app: webdav
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 20480m
    nginx.ingress.kubernetes.io/limit-connections: "5"
    nginx.ingress.kubernetes.io/limit-rpm: "15"
spec:
  ingressClassName: nginx-private
  rules:
    - host: "webdav.lan.stamx.nl"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: webdav-server
                port:
                  name: http
  tls:
    - hosts:
        - webdav.lan.stamx.nl
      secretName: tls-wildcard-lan-stamx-nl
